# OAI_analysis_2

./: .gitignore  LICENSE  README.md  convert_model.py  create_coiled_environment.py  environment.yml  mesh_processing.py  post_build.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: github-hosted-action.yml  self-hosted-action.yml  selfhosted-action.yml  selfhosted_action.yml  test-action.yml
data/: pre_trained_registration_model.REMOVED.git-id  segmentation_model.pth.tar.REMOVED.git-id  segmentation_train_config.pth.tar
data/atlas_60_LEFT_baseline_NMI/: atlas.nii.gz.REMOVED.git-id  atlas_FC_inner_mesh_world.ply  atlas_TC_inner_mesh_world.ply  atlas_image.nii.gz.REMOVED.git-id
data/avsm_settings/: cur_task_setting.json
itkwasm-sub-mesh/: CMakeLists.txt  README.md  environment.yml  package.json  pnpm-lock.yaml
itkwasm-sub-mesh/sub-mesh/: CMakeLists.txt  sub-mesh.cxx
itkwasm-sub-mesh/typescript/: package.json
notebooks/: ComputeThicknessDemo.ipynb  DaskComputation.ipynb  DaskComputationCoiled.ipynb  FullDemo.ipynb  ProbabilityMapThickness.ipynb  Segmentation Demo.ipynb  SegmentationDemo.ipynb  T2Demo.py  coiled_requirements.txt  conda.yml  parent.py
oai_analysis/: __about__.py  __init__.py  analysis_object.py  cartilage_shape_processing.py  dask_processing.py  data.py  mesh_processing.py  pipeline.py  pipeline_cli.py  registration.py  thickness_computation.py  utils.py
oai_analysis/data/atlases/atlas_60_LEFT_baseline_NMI/: FC_inner_embedded.npy  TC_inner_embedded.npy  atlas_FC_inner_mesh_LPS.ply  atlas_FC_inner_mesh_smooth.ply  atlas_TC_inner_mesh_LPS.ply  atlas_TC_inner_mesh_smooth.ply
oai_analysis/segmentation/: __init__.py  image_transforms.py  utils.py
oai_analysis_2/: T2_process.py  __init__.py  affine_models.py  analysis_object.py  dask_processing.py  mesh_processing.py  registration.py  utils.py
oai_analysis_2/segmentation/: module_parameters.py  networks.py  segmenter.py  utils.py
test/: .gitignore  test_all.py  test_mesh_processing.py  tests.py
test/test_files/colab_case/: TC_probmap.nii.gz.REMOVED.git-id
test/test_files/colab_case/avsm/: TC_mesh_world_to_atlas.ply  atlas_FC_mesh_with_thickness.ply
tests/test_files/colab_case/: FC_probmap.nii.gz.REMOVED.git-id  image_preprocessed.nii.gz.REMOVED.git-id
tests/test_files/colab_case/avsm/: FC_2d_thickness.npy  TC_2d_thickness.npy  TC_mesh_world.ply  atlas_TC_mesh_with_thickness.ply
