[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oai-analysis-2"
description = 'Open source analysis approaches for the Osteoarthritis Initiative magnetic resonance image data.'
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Hastings Greer", email = "hastings.greer@gmail.com" },
  { name = "Pranjal Sahu", email = "pranjalsahu5@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/uncbiag/OAI_analysis_2#readme"
Issues = "https://github.com/uncbiag/OAI_analysis_2/issues"
Source = "https://github.com/uncbiag/OAI_analysis_2"

[tool.hatch.version]
path = "oai_analysis_2/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=oai_analysis_2 --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "oai_analysis_2/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
